Issue with hamburger menu on iphone 5 now fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,15 +53,16 @@ nav a:hover {
 }
 
 .navbar .navbar-brand {
-    font-size: 20px;
+    font-size: 16.5px;
     text-transform: uppercase;
     font-family: 'Orbitron', sans-serif;
     font-weight: bold;
     border: 4px solid #BB0627;
+    letter-spacing: 0.2px;
 }
 
 .navbar-nav .nav-item {
-    font-size: 18px;
+    font-size: 15px;
     font-family: 'Orbitron', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
@@ -70,6 +71,7 @@ nav a:hover {
  .navbar-collapse {
      background-color: rgba(187, 154, 6, 1);
  }
+ 
  
 
 /* hero image */
@@ -332,6 +334,7 @@ nav a:hover {
     z-index: 1;
 }
 
+
 .btn-facebook {
     background-color: #405D9D;
     color: #fff;
@@ -392,3 +395,8 @@ color: #fff;
 }
 
 
+.my-3 {
+    margin-top: ($spacer * .25) !important;
+    
+
+}
